--- a/index.html
+++ b/index.html
@@ -38,14 +38,24 @@
           </div>
 
           <div>
-            <a href="#" class="header-button">Agende seu horário</a>
+            <a
+              href="https://api.whatsapp.com/send?phone=5579999999999&text=Quero%20fazer%20um%20agendamento%20hoje!"
+              class="header-button"
+              target="_blank"
+              >Agende seu horário</a
+            >
           </div>
         </nav>
 
         <main class="hero container">
           <h1>ESTILO É UM REFLEXO DA SUA ATITUDE E SUA PERSONALIDADE.</h1>
           <p>Horário de funcionamento: 09:00 às 19:00</p>
-          <a href="#" class="button-contact" target="_blank">Agendar Horário</a>
+          <a
+            href="https://api.whatsapp.com/send?phone=5579999999999&text=Quero%20fazer%20um%20agendamento%20hoje!"
+            class="button-contact"
+            target="_blank"
+            >Agendar Horário</a
+          >
         </main>
       </header>
     </div>
@@ -70,5 +80,78 @@
         </div>
       </div>
     </section>
+
+    <!-- Services -->
+    <section class="services">
+      <div class="services-content container">
+        <h2>Serviços</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste quam
+          tenetur amet porro animi adipisci totam dignissimos, quisquam soluta
+          vitae.
+        </p>
+      </div>
+
+      <section class="haircuts">
+        <div class="haircut">
+          <img src="assets/corte1.png" alt="Corte normal" />
+          <div class="haircut-info">
+            <strong>Corte Normal</strong>
+            <button>R$ 45,00</button>
+          </div>
+        </div>
+        <div class="haircut">
+          <img src="assets/corte2.png" alt="Barba Completa" />
+          <div class="haircut-info">
+            <strong>Barba Completa</strong>
+            <button>R$ 35,00</button>
+          </div>
+        </div>
+        <div class="haircut">
+          <img src="assets/corte3.png" alt="Corte e Barba" />
+          <div class="haircut-info">
+            <strong>Corte e Barba</strong>
+            <button>R$ 85,00</button>
+          </div>
+        </div>
+      </section>
+    </section>
+
+    <!-- Footer -->
+    <div class="services">
+      <h2>Venha conhecer</h2>
+    </div>
+    <iframe
+      width="100%"
+      src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15669.57805520588!2d-37.0635258!3d-10.9335423!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x71ab3be680a622b%3A0xad14c46ee8091822!2sFraz%C3%A3o%20Barber!5e0!3m2!1spt-BR!2sbr!4v1721502995266!5m2!1spt-BR!2sbr"
+      width="600"
+      height="450"
+      style="border: 0"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"
+    ></iframe>
+
+    <footer class="footer">
+      <div class="footer-icons">
+        <a href="#"><i class="fa-brands fa-instagram fa-2x"></i></a>
+        <a href="#"><i class="fa-brands fa-facebook fa-2x"></i></a>
+        <a href="#"><i class="fa-brands fa-tiktok fa-2x"></i></a>
+      </div>
+
+      <div><img src="assets/logo.svg" alt="Logo Barbearia" /></div>
+
+      <p>Copyright 2024 | BarberShop - Todos os direitos reservados.</p>
+    </footer>
+
+    <!-- Button Whatsapp -->
+    <a
+      href="https://api.whatsapp.com/send?phone=5579999999999&text=Quero%20fazer%20um%20agendamento%20hoje!"
+      class="btn-whatsapp"
+      target="_blank"
+    >
+      <img src="assets/whatssapp.svg" alt="Botão whatssapp" />
+      <span class="tooltip-text">Agende seu horário</span>
+    </a>
   </body>
 </html>
