--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,6 +22,8 @@
     />
 
     <link rel="stylesheet" href="style.css" />
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <title>BarberShop</title>
   </head>
   <body>
@@ -27,17 +31,29 @@
     <div class="bg-home">
       <header>
         <nav class="header-content container">
-          <div class="header-icons">
-            <a href="#"><i class="fa-brands fa-instagram fa-2x"></i></a>
-            <a href="#"><i class="fa-brands fa-facebook fa-2x"></i></a>
-            <a href="#"><i class="fa-brands fa-tiktok fa-2x"></i></a>
+          <div class="header-icons" data-aos="fade-down">
+            <a href="https://www.instagram.com/maxeinstein/"
+              ><i class="fa-brands fa-instagram fa-2x"></i
+            ></a>
+            <a href="https://github.com/maxeinstein-dev"
+              ><i class="fa-brands fa-github fa-2x"></i
+            ></a>
+            <a href="https://www.linkedin.com/in/maxeinstein-dev/"
+              ><i class="fa-brands fa-linkedin fa-2x"></i
+            ></a>
           </div>
 
-          <div class="header-logo">
-            <img src="assets/logo.svg" alt="Logo da barbearia" />
+          <div class="header-logo" data-aos="fade-up" data-aos-delay="300">
+            <img
+              data-aos="flip-up"
+              data-aos-delay="300"
+              data-aos-duration="1500"
+              src="assets/logo.svg"
+              alt="Logo da barbearia"
+            />
           </div>
 
-          <div>
+          <div data-aos="fade-down">
             <a
               href="https://api.whatsapp.com/send?phone=5579999999999&text=Quero%20fazer%20um%20agendamento%20hoje!"
               class="header-button"
@@ -47,7 +63,7 @@
           </div>
         </nav>
 
-        <main class="hero container">
+        <main class="hero container" data-aos="fade-up" data-aos-delay="400">
           <h1>ESTILO É UM REFLEXO DA SUA ATITUDE E SUA PERSONALIDADE.</h1>
           <p>Horário de funcionamento: 09:00 às 19:00</p>
           <a
@@ -63,11 +79,15 @@
     <!-- About -->
     <section class="about">
       <div class="container about-content">
-        <div>
+        <div data-aos="zoom-in" data-aos-delay="100">
           <img src="assets/images.svg" alt="Imagem sobre a barbearia" />
         </div>
 
-        <div class="about-description">
+        <div
+          class="about-description"
+          data-aos="zoom-out-left"
+          data-aos-delay="250"
+        >
           <h2>Sobre</h2>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio
@@ -93,21 +113,21 @@
       </div>
 
       <section class="haircuts">
-        <div class="haircut">
+        <div class="haircut" data-aos="fade-up" data-aos-delay="100">
           <img src="assets/corte1.png" alt="Corte normal" />
           <div class="haircut-info">
             <strong>Corte Normal</strong>
             <button>R$ 45,00</button>
           </div>
         </div>
-        <div class="haircut">
+        <div class="haircut" data-aos="fade-up" data-aos-delay="250">
           <img src="assets/corte2.png" alt="Barba Completa" />
           <div class="haircut-info">
             <strong>Barba Completa</strong>
             <button>R$ 35,00</button>
           </div>
         </div>
-        <div class="haircut">
+        <div class="haircut" data-aos="fade-up" data-aos-delay="400">
           <img src="assets/corte3.png" alt="Corte e Barba" />
           <div class="haircut-info">
             <strong>Corte e Barba</strong>
@@ -134,9 +154,15 @@
 
     <footer class="footer">
       <div class="footer-icons">
-        <a href="#"><i class="fa-brands fa-instagram fa-2x"></i></a>
-        <a href="#"><i class="fa-brands fa-facebook fa-2x"></i></a>
-        <a href="#"><i class="fa-brands fa-tiktok fa-2x"></i></a>
+        <a href="https://www.instagram.com/maxeinstein/"
+          ><i class="fa-brands fa-instagram fa-2x"></i
+        ></a>
+        <a href="https://github.com/maxeinstein-dev"
+          ><i class="fa-brands fa-github fa-2x"></i
+        ></a>
+        <a href="https://www.linkedin.com/in/maxeinstein-dev/"
+          ><i class="fa-brands fa-linkedin fa-2x"></i
+        ></a>
       </div>
 
       <div><img src="assets/logo.svg" alt="Logo Barbearia" /></div>
@@ -149,9 +175,13 @@
       href="https://api.whatsapp.com/send?phone=5579999999999&text=Quero%20fazer%20um%20agendamento%20hoje!"
       class="btn-whatsapp"
       target="_blank"
+      data-aos="zoom-in-up"
+      data-aos-delay="400"
     >
       <img src="assets/whatssapp.svg" alt="Botão whatssapp" />
       <span class="tooltip-text">Agende seu horário</span>
     </a>
+
+    <script src="script.js"></script>
   </body>
 </html>
