--- a/index.html
+++ b/index.html
@@ -32,13 +32,15 @@
       <header>
         <nav class="header-content container">
           <div class="header-icons" data-aos="fade-down">
-            <a href="https://www.instagram.com/maxeinstein/"
+            <a href="https://www.instagram.com/maxeinstein/" target="_blank"
               ><i class="fa-brands fa-instagram fa-2x"></i
             ></a>
-            <a href="https://github.com/maxeinstein-dev"
+            <a href="https://github.com/maxeinstein-dev" target="_blank"
               ><i class="fa-brands fa-github fa-2x"></i
             ></a>
-            <a href="https://www.linkedin.com/in/maxeinstein-dev/"
+            <a
+              href="https://www.linkedin.com/in/maxeinstein-dev/"
+              target="_blank"
               ><i class="fa-brands fa-linkedin fa-2x"></i
             ></a>
           </div>
@@ -154,13 +156,13 @@
 
     <footer class="footer">
       <div class="footer-icons">
-        <a href="https://www.instagram.com/maxeinstein/"
+        <a href="https://www.instagram.com/maxeinstein/" target="_blank"
           ><i class="fa-brands fa-instagram fa-2x"></i
         ></a>
-        <a href="https://github.com/maxeinstein-dev"
+        <a href="https://github.com/maxeinstein-dev" target="_blank"
           ><i class="fa-brands fa-github fa-2x"></i
         ></a>
-        <a href="https://www.linkedin.com/in/maxeinstein-dev/"
+        <a href="https://www.linkedin.com/in/maxeinstein-dev/" target="_blank"
           ><i class="fa-brands fa-linkedin fa-2x"></i
         ></a>
       </div>
