Fix: Services Names

--- a/index.html
+++ b/index.html
@@ -92,8 +92,12 @@
         >
           <h2>Sobre</h2>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio
-            officia possimus, labore quas omnis ullam?
+            Bem-vindo à BarberShop! Nosso objetivo é oferecer a melhor
+            experiência em corte de cabelo e barba, combinando estilo e
+            qualidade. Nossos barbeiros são profissionais dedicados, sempre
+            atualizados com as últimas tendências, para garantir que você saia
+            do nosso salão com um visual que realça sua personalidade. Venha nos
+            visitar e descubra um novo padrão de cuidado pessoal.
           </p>
           <p>
             Horário de funcionamento: <strong>09:00</strong> às
@@ -108,9 +112,11 @@
       <div class="services-content container">
         <h2>Serviços</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste quam
-          tenetur amet porro animi adipisci totam dignissimos, quisquam soluta
-          vitae.
+          Na BarberShop, oferecemos uma ampla gama de serviços para atender
+          todas as suas necessidades de grooming. Seja para um corte clássico,
+          um novo estilo ou um cuidado especial com a barba, nossos barbeiros
+          estão prontos para proporcionar uma experiência única e personalizada.
+          Confira nossos principais serviços:
         </p>
       </div>
 
@@ -118,7 +124,7 @@
         <div class="haircut" data-aos="fade-up" data-aos-delay="100">
           <img src="assets/corte1.png" alt="Corte normal" />
           <div class="haircut-info">
-            <strong>Corte Normal</strong>
+            <strong>Corte Simples</strong>
             <button>R$ 45,00</button>
           </div>
         </div>
@@ -132,10 +138,31 @@
         <div class="haircut" data-aos="fade-up" data-aos-delay="400">
           <img src="assets/corte3.png" alt="Corte e Barba" />
           <div class="haircut-info">
-            <strong>Corte e Barba</strong>
+            <strong>Cabelo e Barba</strong>
             <button>R$ 85,00</button>
           </div>
         </div>
+        <!-- <div class="haircut" data-aos="fade-down" data-aos-delay="400">
+          <img src="assets/alinhamento.png" alt="Alinhamento de fios" />
+          <div class="haircut-info">
+            <strong>Alinhamento de fios</strong>
+            <button>R$ 80,00</button>
+          </div>
+        </div>
+        <div class="haircut" data-aos="fade-down" data-aos-delay="250">
+          <img src="assets/hidratação.png" alt="Hidratação" />
+          <div class="haircut-info">
+            <strong>Hidratação</strong>
+            <button>R$ 40,00</button>
+          </div>
+        </div>
+        <div class="haircut" data-aos="fade-down" data-aos-delay="100">
+          <img src="assets/platinado2.png" alt="Platinar cabelo" />
+          <div class="haircut-info">
+            <strong>Platinar cabelo</strong>
+            <button>R$ 100,00</button>
+          </div>
+        </div> -->
       </section>
     </section>
 
